experiment_output/error_log/nondex-ginosian-Restaurant-Manager-Spring-Cloud:APIService.log
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1031/wd/NonDex-plugin-test/github.com/ginosian/Restaurant-Manager-Spring-Cloud/APIService/src/main/java/com/api/dao/RestaurantDAOImpl.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1031/wd/NonDex-plugin-test/github.com/ginosian/Restaurant-Manager-Spring-Cloud/APIService/src/test/java/TestDAO.java:42: error: method createRestaurant in interface RestaurantService cannot be applied to given types;
        restaurant1 = restaurantService.createRestaurant(MockedData.restaurantName());
                                       ^
  required: String,Integer
  found: String
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1031/wd/NonDex-plugin-test/github.com/ginosian/Restaurant-Manager-Spring-Cloud/APIService/src/test/java/TestDAO.java:43: error: method createRestaurant in interface RestaurantService cannot be applied to given types;
        restaurant2 = restaurantService.createRestaurant(MockedData.restaurantName());
                                       ^
  required: String,Integer
  found: String
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1031/wd/NonDex-plugin-test/github.com/ginosian/Restaurant-Manager-Spring-Cloud/APIService/src/test/java/TestDAO.java:44: error: method createRestaurant in interface RestaurantService cannot be applied to given types;
        restaurant3 = restaurantService.createRestaurant(MockedData.restaurantName());
                                       ^
  required: String,Integer
  found: String
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1031/wd/NonDex-plugin-test/github.com/ginosian/Restaurant-Manager-Spring-Cloud/APIService/src/test/java/TestDAO.java:45: error: method createRestaurant in interface RestaurantService cannot be applied to given types;
        restaurant4 = restaurantService.createRestaurant(MockedData.restaurantName());
                                       ^
  required: String,Integer
  found: String
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1031/wd/NonDex-plugin-test/github.com/ginosian/Restaurant-Manager-Spring-Cloud/APIService/src/test/java/TestDAO.java:46: error: method createRestaurant in interface RestaurantService cannot be applied to given types;
        restaurant5 = restaurantService.createRestaurant(MockedData.restaurantName());
                                       ^
  required: String,Integer
  found: String
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1031/wd/NonDex-plugin-test/github.com/ginosian/Restaurant-Manager-Spring-Cloud/APIService/src/test/java/TestDAO.java:60: error: method createRestaurant in interface RestaurantService cannot be applied to given types;
        Assert.assertNull(restaurantService.createRestaurant(restaurant1.getName()));
                                           ^
  required: String,Integer
  found: String
  reason: actual and formal argument lists differ in length
6 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':APIService:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 33s
